hphp/hack/test/typecheck/case_type/case_type_overlapping_variants_arrays.php.exp
File "case_type_overlapping_variants_arrays.php", line 4, characters 11-18:
The case type `DictData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `bool`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 5, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 6, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 7, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 4, characters 11-18:
The case type `DictData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `dict`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 5, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 6, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 7, characters 5-21:
  (function(): void)
  File "case_type_overlapping_variants_arrays.php", line 8, characters 5-22:
  TypeStructure<int>
  File "case_type_overlapping_variants_arrays.php", line 9, characters 5-11:
  shape()
  File "case_type_overlapping_variants_arrays.php", line 10, characters 5-18:
  dict<int, int>
File "case_type_overlapping_variants_arrays.php", line 4, characters 11-18:
The case type `DictData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `float`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 5, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 6, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 7, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 4, characters 11-18:
The case type `DictData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `int`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 5, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 6, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 7, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 4, characters 11-18:
The case type `DictData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `keyset`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 5, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 6, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 7, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 4, characters 11-18:
The case type `DictData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `object`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 5, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 6, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 7, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 4, characters 11-18:
The case type `DictData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `resource`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 5, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 6, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 7, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 4, characters 11-18:
The case type `DictData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `string`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 5, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 6, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 7, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 4, characters 11-18:
The case type `DictData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `vec`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 5, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 6, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 7, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 12, characters 11-20:
The case type `KeysetData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `bool`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 13, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 14, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 15, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 12, characters 11-20:
The case type `KeysetData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `dict`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 13, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 14, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 15, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 12, characters 11-20:
The case type `KeysetData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `float`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 13, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 14, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 15, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 12, characters 11-20:
The case type `KeysetData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `int`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 13, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 14, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 15, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 12, characters 11-20:
The case type `KeysetData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `keyset`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 13, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 14, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 15, characters 5-21:
  (function(): void)
  File "case_type_overlapping_variants_arrays.php", line 16, characters 5-15:
  keyset<int>
File "case_type_overlapping_variants_arrays.php", line 12, characters 11-20:
The case type `KeysetData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `object`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 13, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 14, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 15, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 12, characters 11-20:
The case type `KeysetData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `resource`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 13, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 14, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 15, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 12, characters 11-20:
The case type `KeysetData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `string`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 13, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 14, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 15, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 12, characters 11-20:
The case type `KeysetData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `vec`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 13, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 14, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 15, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 18, characters 11-17:
The case type `VecData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `bool`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 19, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 20, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 21, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 18, characters 11-17:
The case type `VecData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `dict`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 19, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 20, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 21, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 18, characters 11-17:
The case type `VecData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `float`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 19, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 20, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 21, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 18, characters 11-17:
The case type `VecData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `int`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 19, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 20, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 21, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 18, characters 11-17:
The case type `VecData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `keyset`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 19, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 20, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 21, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 18, characters 11-17:
The case type `VecData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `object`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 19, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 20, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 21, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 18, characters 11-17:
The case type `VecData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `resource`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 19, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 20, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 21, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 18, characters 11-17:
The case type `VecData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `string`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 19, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 20, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 21, characters 5-21:
  (function(): void)
File "case_type_overlapping_variants_arrays.php", line 18, characters 11-17:
The case type `VecData` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `vec`: (Typing[4475])
  File "case_type_overlapping_variants_arrays.php", line 19, characters 5-9:
  mixed
  File "case_type_overlapping_variants_arrays.php", line 20, characters 5-11:
  nonnull
  File "case_type_overlapping_variants_arrays.php", line 21, characters 5-21:
  (function(): void)
  File "case_type_overlapping_variants_arrays.php", line 22, characters 5-14:
  (int, int)
  File "case_type_overlapping_variants_arrays.php", line 23, characters 5-12:
  vec<int>
